# docusynthetic-test

./: .env.example  .gitignore  AGENTS.md  BUILD_COMPLETE.md  CHANGELOG_TEMPLATE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  config.example.json  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: build-docs.yml  build-kb.yml  ci.yml
docusynthetic/: __init__.py  cli.py
docusynthetic/fetchers/: __init__.py  base.py  github_mdx.py  live_site.py  openapi.py
docusynthetic/models/: __init__.py
docusynthetic/processors/: __init__.py
docusynthetic/utils/: __init__.py
src/venice_kb/: __init__.py  __main__.py  cli.py  config.py
src/venice_kb/diffing/: __init__.py  changelog_writer.py  differ.py  models.py  snapshot.py
src/venice_kb/llm/: client.py
src/venice_kb/output/: __init__.py  changelog_renderer.py  index_writer.py  kb_writer.py
src/venice_kb/processing/: __init__.py  chunker.py  deduplicator.py  html_converter.py  mdx_converter.py  merger.py
src/venice_kb/sources/: __init__.py  api_prober.py  github_fetcher.py  manifest_loader.py  openapi_parser.py  web_scraper.py
src/venice_kb/utils/: __init__.py  hashing.py  logging.py  tokens.py
tests/: __init__.py  conftest.py  test_changelog_writer.py  test_cli.py  test_config.py  test_deduplicator.py  test_differ.py  test_html_converter.py  test_imports.py  test_mdx_converter.py  test_models.py  test_openapi_parser.py  test_processor.py
tests/fixtures/: sample.mdx  sample_chat_completions.mdx  sample_html.html  sample_llms.txt  sample_rendered_models.html  sample_swagger.yaml  sample_swagger_snippet.yaml
